# ai-revenue-risk-reviewer

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml  requirements.txt  run.py
.claude/: settings.json
.claude/skills/agent-orchestration/: SKILL.md
.claude/skills/analysis-pipeline/: SKILL.md
.claude/skills/data-contracts/: SKILL.md
.claude/skills/governance-independence/: SKILL.md
.claude/skills/onboarding-explainer/: SKILL.md
.claude/skills/revenue-recognition/: SKILL.md
.claude/skills/rule-authoring/: SKILL.md
.claude/skills/security-and-privacy/: SKILL.md
.github/workflows/: ci.yml
config/: engagement.yaml
config/rules/: detection_params.yaml  fraud_scenarios.yaml  rule_catalog.yaml
config/schemas/: data_contracts.json
docs/: agent-design.md  architecture.md  design-rationale.md  governance.md  implementation.md  revenue-recognition.md  security-privacy.md  ux-review.md
samples/: sample_transactions.csv
scripts/: build_demo_data.py  generate_narration.py  record_demo_video.py
src/revenue_risk/: __init__.py  cli.py  config_loader.py  findings.py  funnel.py  paths.py  pipeline.py  scoring.py
src/revenue_risk/agent/: __init__.py  connectors.py  injection.py  orchestrator.py
tests/: __init__.py  test_agent_hitl.py  test_audit_log.py  test_config_integrity.py  test_contracts.py  test_end_to_end.py  test_funnel_scoring.py  test_ingest.py  test_injection.py  test_ml_anomaly.py  test_network.py  test_regressions.py  test_rule_engine.py
web/: README.md  app.js  demo.js  index.html  styles.css
web/data/: data.js
(+18 files in other folders)
